--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,15 +8,12 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <!-- permission to access web service -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_GPS" />
-    <uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
-    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- permission to read latitude and longitude -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- permission to read device Id -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -31,8 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        
     </application>
 
 </manifest>
