--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,13 +8,11 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-    <!-- permission to access web service -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- permission to read latitude and longitude -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- permission to read device Id -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.BATTERY_STATS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -28,6 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        
     </application>
 
 </manifest>
